tests/baselines/reference/project/jsFileCompilationSameNameDTsSpecified/node/jsFileCompilationSameNameDTsSpecified.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== SameNameDTsSpecified/tsconfig.json (0 errors) ====
    { "files": [ "a.d.ts" ] }
==== SameNameDTsSpecified/a.d.ts (0 errors) ====
    declare var test: number;